--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@serverless/aws-lambda",
-  "version": "3.0.0",
+  "name": "@parkhub/aws-lambda",
+  "version": "0.9.0",
   "main": "./serverless.js",
   "publishConfig": {
     "access": "public"
